# robotrainer_docker_ros2_simulation

./: .gitignore  Dockerfile  autostart.sh  build_docker.sh  start_docker.sh
src/robotrainer3_bringup/: CMakeLists.txt  README.md  package.xml
src/robotrainer3_bringup/config/: robotrainer3_controllers.yaml
src/robotrainer3_bringup/docs/source/: conf.py  index.rst
src/robotrainer3_bringup/launch/: demo.launch.xml  demo_simulation.launch.py  demo_test_forward_position_controller.launch.xml  demo_test_joint_trajectory_controller.launch.xml  robotrainer3.launch.py  robotrainer3_simulation.launch.py
src/robotrainer3_description/: CMakeLists.txt  README.md  package.xml
src/robotrainer3_description/launch/: view_demo.launch.xml  view_robotrainer3.launch.py  view_robotrainer3.launch.xml
src/robotrainer3_description/meshes/robotrainer3/collision/: base.stl  handle.stl  leg_left.stl  leg_right.stl  robotrainer_wheel.stl
src/robotrainer3_description/test/: demo_test_urdf_xacro.py  robotrainer3_test_urdf_xacro.py
src/robotrainer3_description/urdf/: demo.urdf.xacro  robotrainer3.urdf.xacro
src/robotrainer3_description/urdf/common/: materials.xacro
src/robotrainer3_description/urdf/demo/: demo_macro.gazebo.xacro  demo_macro.ros2_control.xacro  demo_macro.xacro
src/robotrainer3_description/urdf/drive_wheel/: drive_wheel.urdf.xacro
src/robotrainer3_description/urdf/robotrainer3/: robotrainer3_macro.gazebo.xacro  robotrainer3_macro.ros2_control.xacro  robotrainer3_macro.xacro
src/robotrainer3_description/urdf/sick_s300_laser/: sick_s300_laser.urdf.xacro
