<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotrainer3_description</name>
  <version>0.0.0</version>
  <description>Descriptions files for the RoboTrainer3</description>
  <maintainer email="Andreas.Zachariae@gmail.com">Andreas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <!-- Jazzy <exec_depend>gz_ros2_control</exec_depend> -->
  <!-- Jazzy <exec_depend>ros_gz_sim</exec_depend> -->

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>liburdfdom-tools</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
